[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/HUD/progressBar_Over.png" type="Texture" id=1]
[ext_resource path="res://Player/HUD/progressBar_Under.png" type="Texture" id=2]
[ext_resource path="res://Player/HUD/progressBar_progress.png" type="Texture" id=3]
[ext_resource path="res://Player/HUD/HUD.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BossBars/Healthbar/Healthbar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "loadBossBar"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BossBars/Healthbar/Healthbar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[node name="HUD" type="Control"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Bars" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" type="HBoxContainer" parent="Bars"]
margin_right = 120.0
margin_bottom = 16.0

[node name="HealthBar" type="TextureProgress" parent="Bars/Healthbar"]
margin_right = 120.0
margin_bottom = 16.0
value = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.921569, 1, 0, 1 )

[node name="Specialbar" type="HBoxContainer" parent="Bars"]
margin_top = 20.0
margin_right = 120.0
margin_bottom = 36.0

[node name="Specialbar" type="TextureProgress" parent="Bars/Specialbar"]
margin_right = 120.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 3 )

[node name="BossBars" type="VBoxContainer" parent="."]
visible = false
margin_left = 808.0
margin_top = 11.0
margin_right = 848.0
margin_bottom = 51.0

[node name="Healthbar" type="HBoxContainer" parent="BossBars"]
margin_right = 120.0
margin_bottom = 16.0

[node name="Healthbar" type="TextureProgress" parent="BossBars/Healthbar"]
margin_right = 120.0
margin_bottom = 16.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.270588, 0.388235, 0.67451, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/loadBossBar = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
